maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:16: error: ')' expected but ';' found.
      } else (return ();) // keep moving
                       ^IslandMaze:16: error: illegal start of statement
      } else (return ();) // keep moving
                        ^